Fixes clip SVG frames in Gallery - on mobile

--- a/custom/themes/lgo/src/sass/base/_layout.scss
+++ b/custom/themes/lgo/src/sass/base/_layout.scss
@@ -151,7 +151,7 @@ footer.page-footer {
 .single-page__content {
   padding: 20px;
   @media #{$large-and-up} { 
-    padding: 50px 60px 60px;
+    padding: 50px 100px 60px;
   }
 }
 
