--- a/custom/themes/lgo/src/sass/base/_variables.scss
+++ b/custom/themes/lgo/src/sass/base/_variables.scss
@@ -19,8 +19,8 @@ $body-copy: 			$alt-black;
 $accordion-headers: 	$l-green;
 $body-bg: 				$ll-grey;
 $nav-links: 			$white;
-$main-accent: 			$green;
-$main-accent-trans: 	$green-trans;
+$main-accent: 			$red;
+$main-accent-trans: 	$red-trans;
 $body-links: 			$main-accent;
 $body-links-underline: 	$main-accent-trans;
 $slim-nav-links: 		$main-accent;
