--- a/custom/themes/lgo/src/sass/components/_layout_gallery.scss
+++ b/custom/themes/lgo/src/sass/components/_layout_gallery.scss
@@ -1,7 +1,7 @@
-#columns {
+#gallery-container {
   // column-width: 200px;
   // column-gap: 15px;
-  width: 90%;
+  width: 80%;
   max-width: 1100px;
   margin: 0 auto;
   @media #{$large-and-up} {
@@ -11,7 +11,7 @@
   }
 }
 
-div#columns figure {
+div#gallery-container figure {
   // margin: 0 2px 15px;
   // padding: 15px;
   // padding-bottom: 10px;
@@ -22,27 +22,26 @@ div#columns figure {
   margin: 1%;
   display: inline-block;
   @media #{$large-and-up} {
-    width: 170px;
-    margin: 15px;
+    width: 150px;
+    margin: 0px 2% 30px;
   }
 }
 
-div#columns figure img {
+div#gallery-container figure img {
   width: 100%; 
   height: auto;
   // padding-bottom: 15px;
   margin-bottom: 5px;
 }
 
-div#columns figure figcaption {
-  font-size: .9rem;
-  color: #444;
-  line-height: 1.3;
+div#gallery-container figure figcaption {
   text-align: center;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
   margin-top: 15px;
   a {
-      // color: $blue;
-      color: $alt-black;
-      border-bottom: none;
+    color: $alt-black;
+    border-bottom: none;
   }
 }
